cuda_ops_test/gen_bang_results/52_Argmin_over_a_dimension-output.txt
warning: CUDA version 12.1 is only partially supported
./cuda_ops/52_Argmin_over_a_dimension.cu:31:26: error: use of undeclared identifier 'FLT_MAX'
   31 |     scalar_t local_min = FLT_MAX;
      |                          ^
